chore: point about link to about.johnsonlee.io and fix mobile nav spacing

--- a/themes/maupassant/source/css/style.scss
+++ b/themes/maupassant/source/css/style.scss
@@ -505,7 +505,7 @@ div {
             position: relative;
             text-align: center;
             a {
-                padding: 0 15px;
+                padding: 0 10px;
                 line-height: 27px;
                 height: 27px;
                 font-size: 13px;
